--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ sudo: required
 language: ruby
 ruby:
 - 2.2
-- marathon_deploy
 
 services:
   - docker
@@ -16,7 +15,7 @@ before_install:
   - sudo apt-get install -y curl python-pip ruby-dev
   - sudo pip install pip --upgrade
   - sudo pip install docker-compose --upgrade
-  - #sudo gem install marathon_deploy travis
+  - gem install marathon_deploy
   - cd examples/SimpleWebappPython
   - ./test_service.sh
   - ./build-docker-images.sh
