--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -77,6 +77,7 @@ stderr_events_enabled = true
 
 [program:mesos-slave]
 priority=128
+stopsignal=USR1
 command=mesos-slave %(ENV_MESOS_SLAVE_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_MESOS_SLAVE)s
