--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -107,7 +107,7 @@ RUN wget https://github.com/hashicorp/consul-template/releases/download/v${CONSU
 # Add files
 ADD haproxy.cfg        /etc/haproxy/
 ADD haproxy.cfg        /opt/consul-template/ # same file for an "empty template"
-ADD haproxy.conf.ctmpl /opt/consul-template/
+ADD haproxy.cfg.ctmpl  /opt/consul-template/
 ADD haproxy_reload.sh  /opt/consul-template/
 ADD consul-template.sh /opt/consul-template/
 ADD consul_config.json /etc/consul.d/
