--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ ruby:
 
 before_install:
   - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv F76221572C52609D
-  - echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list
+  - echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /tmp/docker.list
+  - sudo cp /tmp/docker.list /etc/apt/sources.list.d/docker.list
   - sudo apt-get update
   - sudo apt-get -q -y install linux-image-extra-$(uname -r)
   - sudo apt-get -q -y install docker-engine=1.7.1-0~trusty
