--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,13 @@
-sudo: required
+language: bash
+
+# for secret experimental features ;)
+sudo: 9000
 
 notifications:
   slack: ebayclassifiedsgroup:tFHOcsnmbj9SKmfquoJJKjSb
 
-language: ruby
-ruby:
-- 2.2
-
 before_install:
-  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv F76221572C52609D
-  - echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /tmp/docker.list
-  - sudo cp /tmp/docker.list /etc/apt/sources.list.d/docker.list
   - sudo apt-get update
-  - sudo apt-get -q -y install linux-image-extra-$(uname -r)
-  - sudo apt-get -q -y install docker-engine=1.7.1-0~trusty
   - sudo apt-get install -y curl python-pip ruby-dev
   - sudo pip install pip --upgrade
   - sudo pip install docker-compose --upgrade
