--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - sudo pip install docker-compose --upgrade
   - gem install marathon_deploy
 #  - ./build-docker-images.sh
-  - docker pull panteras/pass-in-a-box
+  - docker pull panteras/paas-in-a-box:latest
   - export IP=$(/sbin/ifconfig eth0 | awk '/inet addr:/{gsub(/.*:/,"",$2);print $2;exit}')
   - echo $IP
   - export START_DNSMASQ=false
