--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
   - sudo pip install docker-compose --upgrade
   - gem install marathon_deploy
   - docker pull ubuntu:14.04
+  - docker run -d -c 204 -m 50331648 --net bridge -p 30909:8080/tcp --entrypoint /bin/sh ubuntu:14.04 -c python3 -m http.server 8080
+  - docker ps
   - ./build-docker-images.sh
 #  - docker pull panteras/paas-in-a-box:latest
   - export IP=$(/sbin/ifconfig eth0 | awk '/inet addr:/{gsub(/.*:/,"",$2);print $2;exit}')
