--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ notifications:
   slack: ebayclassifiedsgroup:tFHOcsnmbj9SKmfquoJJKjSb
 
 before_install:
+  - sudo iptables -N DOCKER 
   - sudo apt-get update
   - sudo apt-get install -y curl python-pip ruby-dev
   - sudo pip install pip --upgrade
