--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,8 @@ script:
   - cd -
   - cd examples/SmoothWebappPython
   - ./test_service.sh
-  - docker logs panteras_panteras_1
+  - docker exec -ti panteras_panteras_1 supervisorctl status
+  - curl -s http://${IP}:8080/v2/leader
+  - curl -s http://${IP}:8080/v2/info
+  - curl -I -s http://${IP}:5050/master/health
+  - curl -s http://${IP}:5050/system/stats.json
