--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: bash
 
 sudo: required
+services: docker 
 
 env:
   global:
-    - DOCKER_VERSION=1.8.2
-    - BRANCH=stable
-    - UML_DOCKERCOMPOSE=1 
-
-services: docker 
+    - DOCKER_APP_VERSION=1.8.2-0~trusty
 
 notifications:
   slack: ebayclassifiedsgroup:tFHOcsnmbj9SKmfquoJJKjSb
 
 before_install:
+  - echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /tmp/docker.list
+  - sudo cp /tmp/docker.list /etc/apt/sources.list.d/docker.list
+  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv F76221572C52609D
+  - sudo apt-get update && sudo apt-get install -y docker-engine=${DOCKER_APP_VERSION}
+  - sudo apt-cache policy docker-engine || true
   - sudo iptables -L DOCKER || sudo iptables -N DOCKER 
   - sudo apt-get update
   - sudo apt-get install -y curl python-pip ruby-dev build-essential python-dev
