ix generator - Change port exposing - depends on service which start

--- a/examples/SmoothWebappPython/simple_webapp_python/Dockerfile
+++ b/examples/SmoothWebappPython/simple_webapp_python/Dockerfile
@@ -13,7 +13,7 @@ ADD ./index.html /opt/web/
 ADD ./cgi-bin/index /opt/web/cgi-bin/
 RUN chmod a+x /opt/web/cgi-bin/index 
 
-RUN cd /usr/local/bin/ && curl -O https://raw.githubusercontent.com/eBayClassifiedsGroup/PanteraS/master/frameworks/start.sh
+ADD https://raw.githubusercontent.com/eBayClassifiedsGroup/PanteraS/master/frameworks/start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
 
 EXPOSE 8000
