Change naming of node images
	* add node 0.12 and node 4

--- a/frameworks/jessie-node5/Dockerfile
+++ b/frameworks/jessie-node5/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Wojciech Sielski <wsielski@team.mobile.de>
 RUN cd /usr/local/bin/ && curl -O https://raw.githubusercontent.com/eBayClassifiedsGroup/PanteraS/master/frameworks/start.sh
 RUN chmod +x /usr/local/bin/start.sh
 
-ENV IMAGE panteras/jessie-node
+ENV IMAGE panteras/jessie-node5
 ENV HOME  /
 WORKDIR /
 
