--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -95,3 +95,12 @@ startretries=100
 stopwaitsecs = 30
 stdout_events_enabled = true
 stderr_events_enabled = true
+
+[program:chronos]
+priority=512
+command=/usr/bin/chronos run_jar %(ENV_CHRONOS_APP_PARAMS)s
+autorestart=true
+autostart=%(ENV_START_CHRONOS)s
+user=root
+stdout_events_enabled = true
+stderr_events_enabled = true
