--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -5,7 +5,7 @@ nodaemon=true
 file=/tmp/supervisor.sock
 
 [inet_http_server]
-port=0.0.0.0:9000
+port=%(ENV_LISTEN_IP)s:9000
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
