Adding fabio as experimental

--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -48,6 +48,16 @@ user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
+[program:fabio]
+priority=16
+directory=/opt/fabio
+command=fabio %(ENV_FABIO_APP_PARAMS)s
+autorestart=true
+autostart=%(ENV_START_FABIO)s
+user=root
+stdout_events_enabled = true
+stderr_events_enabled = true
+
 [program:zookeeper]
 priority=8
 command=/opt/zkStart.sh %(ENV_ZOOKEEPER_APP_PARAMS)s
