--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /tmp/docker.list
   - sudo cp /tmp/docker.list /etc/apt/sources.list.d/docker.list
   - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv F76221572C52609D
-  - sudo apt-get update && sudo apt-get install -y docker-engine=${DOCKER_APP_VERSION}
+  - sudo apt-get update && sudo apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" docker-engine=${DOCKER_APP_VERSION}
   - sudo apt-cache policy docker-engine || true
   - sudo iptables -L DOCKER || sudo iptables -N DOCKER 
   - sudo apt-get update
