--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -114,3 +114,12 @@ autostart=%(ENV_START_CHRONOS)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
+
+[program:netdata]
+priority=768
+command=/opt/netdata/usr/sbin/netdata %(ENV_NETDATA_APP_PARAMS)s
+autorestart=true
+autostart=%(ENV_START_NETDATA)s
+user=root
+stdout_events_enabled = true
+stderr_events_enabled = true
