--- a/infrastructure/haproxy.cfg
+++ b/infrastructure/haproxy.cfg
@@ -25,7 +25,8 @@ defaults
     errorfile 503 /etc/haproxy/errors/503.http
     errorfile 504 /etc/haproxy/errors/504.http
 
-listen stats ${LISTEN_IP}:${PORT_STATS}
+listen stats
+    bind ${LISTEN_IP}:${PORT_STATS}
     mode http
     stats enable
     stats hide-version
