Supervisord makes log outside of container

--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -1,5 +1,7 @@
 [supervisord]
 nodaemon=true
+childlogdir=/tmp/supervisord
+logfile=/tmp/supervisord/supervisord.log
 
 [unix_http_server]
 file=/tmp/supervisor.sock
