--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -35,16 +35,16 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 ENV SUPERVISORD_APP_VERSION       3.2.3
-ENV DOCKER_APP_VERSION            1.12.1-0~xenial
+ENV DOCKER_APP_VERSION            1.12.3-0~xenial
 ENV CONSUL_APP_VERSION            0.7.0
 ENV CONSUL_TEMPLATE_APP_VERSION   0.16.0
 ENV HAPROXY_APP_VERSION           1.6.3-1ubuntu0.1
 ENV MESOS_APP_VERSION             1.0.1-2.0.94.ubuntu1604
-ENV MARATHON_APP_VERSION          1.3.2-1.0.525.ubuntu1604
+ENV MARATHON_APP_VERSION          1.3.5-1.0.537.ubuntu1604
 ENV REGISTRATOR_APP_VERSION       v7
 ENV CHRONOS_APP_VERSION           2.4.0-0.1.20151007110204.ubuntu1404
-ENV FABIO_APP_VERSION             1.3.2
-ENV FABIO_GO_APP_VERSION          go1.7.1
+ENV FABIO_APP_VERSION             1.3.4
+ENV FABIO_GO_APP_VERSION          go1.7.3
 
 ENV DOCKER_HOST unix:///tmp/docker.sock
 
@@ -152,9 +152,9 @@ RUN mkdir /opt/fabio
 ENV PATH ${PATH}:/opt/fabio
 WORKDIR /opt/fabio
 ADD fabio.properties /opt/fabio/fabio.properties
-RUN wget https://github.com/eBay/fabio/releases/download/v${FABIO_APP_VERSION}/fabio-${FABIO_APP_VERSION}-${FABIO_GO_APP_VERSION}_linux-amd64 \
-    && chmod a+x fabio-${FABIO_APP_VERSION}-${FABIO_GO_APP_VERSION}_linux-amd64 \
-    && ln -s fabio-${FABIO_APP_VERSION}-${FABIO_GO_APP_VERSION}_linux-amd64 fabio
+RUN wget https://github.com/eBay/fabio/releases/download/v${FABIO_APP_VERSION}/fabio-${FABIO_APP_VERSION}-${FABIO_GO_APP_VERSION}-linux_amd64 \
+    && chmod a+x fabio-${FABIO_APP_VERSION}-${FABIO_GO_APP_VERSION}-linux_amd64 \
+    && ln -s fabio-${FABIO_APP_VERSION}-${FABIO_GO_APP_VERSION}-linux_amd64 fabio
 
 
 # NETDATA
