http-reuse for better performance
Relates to eBayClassifiedsGroup/PanteraS#236

--- a/infrastructure/haproxy.cfg
+++ b/infrastructure/haproxy.cfg
@@ -15,7 +15,8 @@ defaults
     timeout server   60s
     timeout tunnel 3600s
     option dontlognull
-    option http-server-close
+    option http-keep-alive
+    http-reuse safe
     option redispatch
     errorfile 400 /etc/haproxy/errors/400.http
     errorfile 403 /etc/haproxy/errors/403.http
