--- a/frameworks/alpine-glibc/Dockerfile
+++ b/frameworks/alpine-glibc/Dockerfile
@@ -2,14 +2,10 @@ FROM alpine:3.2
 
 MAINTAINER Wojciech Sielski <wsielski@team.mobile.de>
 
-RUN apk --update add curl bash
-RUN curl -O "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk" \
-  && apk add --allow-untrusted glibc-2.21-r2.apk \
-  && rm -f glibc-2.21-r2.apk
-RUN curl -O "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk" \
-  && apk add --allow-untrusted glibc-bin-2.21-r2.apk \
-  && rm -f glibc-bin-2.21-r2.apk
-RUN /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib
+RUN apk --update add wget curl bash ca-certificates
+RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub
+RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.25-r0/glibc-2.25-r0.apk
+RUN apk add glibc-2.25-r0.apk
 
 RUN cd /usr/local/bin/ && curl -O https://raw.githubusercontent.com/eBayClassifiedsGroup/PanteraS/master/frameworks/start.sh
 RUN chmod +x /usr/local/bin/start.sh
