--- a/frameworks/alpine-glibc/Dockerfile
+++ b/frameworks/alpine-glibc/Dockerfile
@@ -2,10 +2,7 @@ FROM alpine:3.2
 
 MAINTAINER Wojciech Sielski <wsielski@team.mobile.de>
 
-RUN apk --update add wget curl bash ca-certificates
-RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub
-RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.25-r0/glibc-2.25-r0.apk
-RUN apk add glibc-2.25-r0.apk
+RUN apk --update add curl bash ca-certificates
 
 RUN cd /usr/local/bin/ && curl -O https://raw.githubusercontent.com/eBayClassifiedsGroup/PanteraS/master/frameworks/start.sh
 RUN chmod +x /usr/local/bin/start.sh
