--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -52,7 +52,7 @@ ENV CHRONOS_APP_VERSION           2.5.0-0.1.20170816233446.ubuntu1604
 ENV FABIO_APP_VERSION             1.5.2
 ENV FABIO_GO_APP_VERSION          go1.8.3
 ENV NETDATA_APP_VERSION           1.8.0
-ENV MARATHON_LDAP_VERSION         v1.3.1
+ENV MARATHON_LDAP_VERSION         1.3
 
 ENV DOCKER_HOST unix:///tmp/docker.sock
 
