new release prep.

--- a/infrastructure/fabio.properties
+++ b/infrastructure/fabio.properties
@@ -1,3 +1,6 @@
 proxy.addr = :80
 ui.addr    = :81
 registry.consul.register.addr = :81
+registry.consul.noroutehtmlpath = /panteras/http
+registry.consul.register.name = fabio-paas
+registry.consul.tagprefix = paas-
