--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_install:
   - sudo apt-get install -y --force-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" docker-engine=${DOCKER_APP_VERSION}
   - sudo iptables -L DOCKER || sudo iptables -N DOCKER 
   - sudo apt-get install -y curl python-pip ruby-dev build-essential python-dev
-  - sudo pip install pip --upgrade
-  - sudo pip install docker-compose --upgrade
+  - sudo pip install pip
+  - sudo pip install docker-compose
   - gem install marathon_deploy
   - docker pull ubuntu:16.04
   - docker ps
