--- a/examples/SmoothWebappPython/simple_webapp_python/Dockerfile
+++ b/examples/SmoothWebappPython/simple_webapp_python/Dockerfile
@@ -16,8 +16,11 @@ RUN chmod a+x /opt/web/cgi-bin/index
 ADD https://raw.githubusercontent.com/eBayClassifiedsGroup/PanteraS/master/frameworks/start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
 
-EXPOSE 8000
+RUN addgroup -g 31337 ecgapp && \
+    adduser  -G ecgapp -u 31337 -h /app -s /bin/false -D ecgapp
 
-WORKDIR /
+USER ecgapp
+
+WORKDIR /app
 
 ENTRYPOINT ["/usr/local/bin/start.sh"]
