--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -27,7 +27,7 @@ priority=4
 command=/opt/consul/consul %(ENV_CONSUL_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_CONSUL)s
-user=root
+user=consul
 stdout_events_enabled = true
 stderr_events_enabled = true
 
@@ -46,7 +46,7 @@ directory=/opt/fabio
 command=fabio %(ENV_FABIO_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_FABIO)s
-user=root
+user=fabio
 stdout_events_enabled = true
 stderr_events_enabled = true
 
